# tum-praktikum-ml

./: LICENSE  README.md
data/: README.md  messages.parquet
data/tickets/: 2000000060.csv  2000000070.csv  2000000071.csv  2000000073.csv  2000000080.csv  status_log.csv  tickets.csv
doc/: column_descriptions_UCC_ticket_system.txt
src/: analysis.ipynb  main.ipynb  preprocessing.py  pyproject.toml
